# Streamlit-DockerPi

./: README.md
streamlit/: Dockerfile  docker-compose.yml
streamlit/app/: main.py  pyproject.toml
